# playground

./: .env.example  .gitignore  CLAUDE.md  DMS_SETUP_GUIDE.md  QUICK_START.md  README.md  docker-compose.yml  index.html  setup.sh  styles.css
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pages.yml
caltech-library-workshop-python/: README.md
conan/: CMakeUserPresets.json  README.md  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
conan/test_package/: CMakeUserPresets.json
data/: FIREFLY-566-atlas-example-cutout-image.tbl  LC-m81-neowise-images.tbl  SCS-sample-m31.xml  WISE-mep-2764p772_ac51-010204.tbl  all_data-757076-Kepler-lightcurve.tbl  atlas-abell-test.tbl  atlas-seip-test.tbl  cds-votable-sample.xml  table_IRS_Enh-Spectra-1.vot  vo-nexsci-result-sample.xml
jenkins/: demo-s3-cp.jenkinsfile  demo.jenkinsfile
nginx/: nginx.conf
nginx/conf.d/: papyrus-dms.conf
python/: Dockerfile  README.md  airflow-dag.py
python/abstraction-properties/: README.md  config-db.json  config-file.json  datahandler.py  test.py
python/data-handler/: CsvJsonDataHandler.py  CvsDataHandler.py  DataConverter.py  (+5 more)
python/mcp-hello/: .env.example  Dockerfile  README.md  claude_desktop_config.json  client.py  client_local.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  server.py  webapp.py  webapp_local.py
python/mcp-hello/templates/: index.html
spacex-forecast/: index.html  script.js  styles.css
tpv/: PTF-sample.fits  setTpv.py
(+13 files in other folders)
