[project]
name = "mcp-hello"
version = "0.1.0"
description = "Hello World MCP server + chatbot demo"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "anthropic>=0.45.0",
    "ollama>=0.4.0",
    "flask>=3.1.0",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-hello-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
